--- a/pi/templates/index.html
+++ b/pi/templates/index.html
@@ -60,8 +60,8 @@
             <button id='rear' class="btn btn-lg btn-primary glyphicon glyphicon-circle-arrow-down"></button>
         </div>
          <div>
-            <button id='leftRear' class="btn btn-lg btn-primary glyphicon">左后转</button>
-            <button id='rightRear' class="btn btn-lg btn-primary glyphicon">右后转</button>
+            <button id='leftRear' class="btn btn-lg btn-primary glyphicon">原地左转</button>
+            <button id='rightRear' class="btn btn-lg btn-primary glyphicon">原地右转</button>
         </div>
     </div>
     <!-- <script language="JavaScript"> 
