moudle the project.

--- a/pi/templates/index.html
+++ b/pi/templates/index.html
@@ -25,9 +25,9 @@
         });
     </script>
     
-    {% if 0 == stop %}
+    <!-- {% if 0 == stop %}
     <meta http-equiv="refresh" content="2;url={{ url_for('test') }}">
-    {% endif %}
+    {% endif %} -->
   </head>
 
   <body>
@@ -39,7 +39,7 @@
             <P> 湿度: <span>{{ hum }} RH</span></P>
         </div>
         <div class="t_b_box1">
-            <P> GPS: <span> {{ gps }} </span></P>
+            <P> GPS: <span> {{ gpsdata }} </span></P>
         </div>
     </div>
 
